--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        compose_version = '1.3.0-beta01'
+        compose_version = '1.2.0'
         nav_version = "2.5.1"
     }
 }
@@ -8,7 +8,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
 // Top-level build file where you can add configuration options common to all su
 }
 
