--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ buildscript {
         compose_version = '1.2.0'
         nav_version = "2.5.1"
     }
+    dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
+    }
 }
 
 plugins {
