--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:2.42"
     kapt "com.google.dagger:hilt-compiler:2.42"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
     testImplementation 'junit:junit:4.13.2'
 
