--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ buildscript {
     ext {
         compose_version = '1.2.0'
         nav_version = "2.5.1"
+        lifecycle_version = "2.6.0-alpha02"
+        arch_version = "2.1.0"
     }
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
