--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.5.1'
     implementation "androidx.navigation:navigation-compose:$nav_version"
 
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
     implementation "com.google.dagger:hilt-android:2.42"
     kapt "com.google.dagger:hilt-compiler:2.42"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
